Fixed gap mentioned in issue 69
git-svn-id: http://svg-edit.googlecode.com/svn/trunk@421 eee81c28-f429-11dd-99c0-75d572ba1ddd

--- a/editor/svg-editor.css
+++ b/editor/svg-editor.css
@@ -168,6 +168,7 @@ div.color_block {
 	position: relative;
 	top: -13px;
 	left: -5px;
+	margin-bottom: -13px;
 }
 
 #svg_editor .tool_button, #svg_editor .tool_button_current, #svg_editor .tool_button_disabled {
